fix width on mobile for project portfolio

--- a/components/PortfolioProject/index.scss
+++ b/components/PortfolioProject/index.scss
@@ -16,7 +16,7 @@
     line-height: 25px;
     font-size: 18px;
     margin-top: 10px;
-    width: 90%;
+    //width: 90%;
   }
 
   time {
@@ -44,7 +44,6 @@
   width: 90%;
 
   div, p {
-    text-align: justify;
     margin: 0 0 25px 0;
     font-size: 20px;
     color: $primary-text-color;
@@ -65,12 +64,6 @@
   }
 }
 
-@media (max-width: 415px) {
-  .project {
-    margin: 0 2% 40px 2%;
-  }
-}
-
 @media  (max-width: 800px) {
   .project-heading {
     flex-direction: column;
@@ -83,5 +76,14 @@
     box-shadow: none;
     width: 100%;
     border-radius: 0;
+  }
+}
+
+@media (max-width: 415px) {
+  .project-summary {
+    width: 85%;
+  }
+  .project {
+    margin: 0 2% 40px 2%;
   }
 }
